# Multi_agent_system

./: .gitignore  AGENTS.md  LICENSE  PROJECT.md  README.md  TOOLS.md  main.py  pyproject.toml  requirements.txt
docs/adr/: 0001-langgraph-agent-runtime.md  0002-litestar-api.md  0003-lancedb-hybrid-retrieval.md  0004-provider-neutral-model-layer.md  0005-deterministic-evaluation.md
src/: __init__.py
src/agents/: __init__.py  base.py  critic.py  executor.py  manager.py  planner.py
src/memory/: __init__.py  base.py  long_term.py  short_term.py
src/prompts/: __init__.py  critic.py  executor.py  planner.py
src/research_copilot/: __init__.py  agents.py  api.py  cli.py  evaluation.py  graph.py  service.py  types.py
src/research_copilot/data/: fixtures.py  sample_techqa.json
src/research_copilot/models/: __init__.py  base.py
src/research_copilot/retrieval/: __init__.py  chunking.py  embeddings.py  repository.py  service.py  tokenization.py
src/research_copilot/tools/: __init__.py  registry.py
src/research_copilot/ui/: streamlit_app.py
src/schemas/: __init__.py  messages.py  state.py
src/tools/: __init__.py  base.py  calculator.py  text_analyzer.py
src/utils/: logger.py
tests/: test_agents.py  test_api.py  test_evaluation.py  test_graph.py  test_public_types.py  test_retrieval.py
